--- a/about.html
+++ b/about.html
@@ -21,7 +21,6 @@
                     <h2>我係TNH</h2>
                 </div>
             </header>
-
             <section class="p-sections">
                 <div class="p-box">
                     <h3>一個</h3>
@@ -42,7 +41,6 @@
                     </div>
                 </div>
             </section>
-
             <footer class="p-footer">
                 <h3>關注我</h3>
                 <div class="p-social-bar">
@@ -56,14 +54,8 @@
         <div class="l-panel active" id="lHome">
             <div class="l-home-left">
                 <div class="l-info-stack">
-                    <div class="l-group">
-                        <h3>一個</h3>
-                        <p>創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p>
-                    </div>
-                    <div class="l-group">
-                        <h3>興趣</h3>
-                        <p>Minecraft、創作、懷舊設計、軟件修改</p>
-                    </div>
+                    <div class="l-group"><h3>一個</h3><p>創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p></div>
+                    <div class="l-group"><h3>興趣</h3><p>Minecraft、創作、懷舊設計、軟件修改</p></div>
                 </div>
                 <button class="l-btn-action" onclick="goWorks()">瀏覽作品</button>
             </div>
@@ -85,7 +77,7 @@
             <div class="l-fr-engine">
                 <div class="l-fr-display">
                     <div class="fr-stage-box" id="frStage">
-                        <div class="fr-card fr-hidden-side" id="frNextNext">作品 3</div>
+                        <div class="fr-card fr-hidden-pos" id="frNext">作品 3</div>
                         <div class="fr-card fr-back-pos" id="frBack">作品 2</div>
                         <div class="fr-card fr-main-pos" id="frMain">作品 1</div>
                     </div>
@@ -109,7 +101,6 @@
             </div>
         </div>
     </div>
-
     <script src="about.js"></script>
 </body>
 </html>
