--- a/about.html
+++ b/about.html
@@ -54,8 +54,8 @@
         <div class="l-panel active" id="lHome">
             <div class="l-home-left">
                 <div class="l-info-stack">
-                    <div class="l-group"><h3>一個</h3><p>創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p></div>
-                    <div class="l-group"><h3>興趣</h3><p>Minecraft、創作、懷舊設計、軟件修改</p></div>
+                    <div class="l-group"><h3>一個</h3><p>創作者、HongKonger、Minecrafter...</p></div>
+                    <div class="l-group"><h3>興趣</h3><p>Minecraft、創作、懷舊設計...</p></div>
                 </div>
                 <button class="l-btn-action" onclick="goWorks()">瀏覽作品</button>
             </div>
@@ -77,7 +77,7 @@
             <div class="l-fr-engine">
                 <div class="l-fr-display">
                     <div class="fr-stage-box" id="frStage">
-                        <div class="fr-card fr-hidden-pos" id="frNext">作品 3</div>
+                        <div class="fr-card fr-hidden-right" id="frNextNext">作品 3</div>
                         <div class="fr-card fr-back-pos" id="frBack">作品 2</div>
                         <div class="fr-card fr-main-pos" id="frMain">作品 1</div>
                     </div>
