--- a/about.html
+++ b/about.html
@@ -85,9 +85,10 @@
             <div class="l-fr-engine">
                 <div class="l-fr-display">
                     <div class="fr-stage-box" id="frStage">
-                        <div class="fr-card fr-hidden-right" id="frNextNext">作品 3</div>
-                        <div class="fr-card fr-back-pos" id="frBack">作品 2</div>
-                        <div class="fr-card fr-main-pos" id="frMain">作品 1</div>
+                        <div class="fr-card fr-pos-left-out" id="frPrev">作品 5</div>
+                        <div class="fr-card fr-pos-right-out" id="frNext">作品 3</div>
+                        <div class="fr-card fr-pos-back" id="frBack">作品 2</div>
+                        <div class="fr-card fr-pos-main" id="frMain">作品 1</div>
                     </div>
                     <div class="l-fr-btns">
                         <button class="fr-btn gray" onclick="goHome()">關閉</button>
