--- a/about.html
+++ b/about.html
@@ -78,7 +78,6 @@
                 </div>
             </div>
         </div>
-
         <div class="l-panel" id="lWorks">
             <div class="l-fr-container-limit">
                 <div class="l-fr-engine">
@@ -112,6 +111,17 @@
     </div>
 
     <div class="d-view">
+        <div class="d-center-info" id="dCenterInfo">
+            <div class="d-info-item">
+                <h3>一個</h3>
+                <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
+            </div>
+            <div class="d-info-item">
+                <h3>興趣</h3>
+                <p>Minecraft、創作、懷舊設計、軟件修改</p>
+            </div>
+        </div>
+
         <div class="d-layout">
             <aside class="d-sidebar-left">
                 <div class="d-profile-header">
@@ -119,25 +129,16 @@
                     <div class="d-title-block">
                         <h1>Hello</h1>
                         <h2>我係TNH</h2>
-                    </div>
-                </div>
-                
-                <div class="d-info-section">
-                    <div class="d-info-item">
-                        <h3>一個</h3>
-                        <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
-                    </div>
-                    <div class="d-info-item">
-                        <h3>興趣</h3>
-                        <p>Minecraft、創作、懷舊設計、軟件修改</p>
+                        <p class="d-about-text">創作者、玩家、HongKonger、Minecrafter</p>
                     </div>
                 </div>
 
-                <div class="d-footer-section">
-                    <h3>關於我</h3>
-                    <div class="d-social-icons">
-                        <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
-                    </div>
+                <div class="d-social-section">
+                    <div class="d-social-item"><img src="image/ig.png"><span>tnh_minecraft_lost</span></div>
+                    <div class="d-social-item"><img src="image/th.png"><span>tnh_minecraft_lost</span></div>
+                    <div class="d-social-item"><img src="image/yt.png"><span>TNH Minecraft</span></div>
+                    <div class="d-social-item"><img src="image/rd.png"><span>TNTTC2</span></div>
+                    <div class="d-social-item"><img src="image/tw.png"><span>TnhTrying44231</span></div>
                 </div>
             </aside>
 
