--- a/about.html
+++ b/about.html
@@ -111,29 +111,23 @@
     </div>
 
     <div class="d-view">
-        <div class="d-center-info" id="dCenterInfo">
-            <div class="d-info-item">
-                <h3>一個</h3>
-                <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
-            </div>
-            <div class="d-info-item">
-                <h3>興趣</h3>
-                <p>Minecraft、創作、懷舊設計、軟件修改</p>
-            </div>
-        </div>
-
         <div class="d-layout">
             <aside class="d-sidebar-left">
-                <div class="d-profile-header">
-                    <img src="image/icon.jpeg" class="d-avatar">
-                    <div class="d-title-block">
-                        <h1>Hello</h1>
-                        <h2>我係TNH</h2>
-                        <p class="d-about-text">創作者、玩家、HongKonger、Minecrafter</p>
+                <div class="d-profile-group">
+                    <div class="d-header-top">
+                        <img src="image/icon.jpeg" class="d-avatar">
+                        <div class="d-title-block">
+                            <h1>Hello</h1>
+                            <h2>我係TNH</h2>
+                        </div>
+                    </div>
+                    <div class="d-about-me">
+                        <h3>關於我</h3>
+                        <p>這是一個極具戲劇性的個人空間，展示我的創作與興趣。</p>
                     </div>
                 </div>
-
-                <div class="d-social-section">
+                
+                <div class="d-social-vertical">
                     <div class="d-social-item"><img src="image/ig.png"><span>tnh_minecraft_lost</span></div>
                     <div class="d-social-item"><img src="image/th.png"><span>tnh_minecraft_lost</span></div>
                     <div class="d-social-item"><img src="image/yt.png"><span>TNH Minecraft</span></div>
@@ -141,6 +135,17 @@
                     <div class="d-social-item"><img src="image/tw.png"><span>TnhTrying44231</span></div>
                 </div>
             </aside>
+
+            <div class="d-center-info" id="dCenterInfo">
+                <div class="d-info-card">
+                    <h3>一個</h3>
+                    <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
+                </div>
+                <div class="d-info-card">
+                    <h3>興趣</h3>
+                    <p>Minecraft、創作、懷舊設計、軟件修改</p>
+                </div>
+            </div>
 
             <main class="d-content-right">
                 <div class="d-stage-area" id="dStageArea">
