--- a/about.html
+++ b/about.html
@@ -13,39 +13,39 @@
         <div class="p-scroll-content">
             <header class="p-header">
                 <div class="p-avatar-wrap">
-                    [span_0](start_span)<img src="image/icon.jpeg" class="p-avatar">[span_0](end_span)
+                    <img src="image/icon.jpeg" class="p-avatar">
                     <div class="p-gloss"></div>
                 </div>
                 <div class="p-title">
                     <h1>Hello</h1>
                     <h2>我係TNH</h2>
-                [span_1](start_span)</div>[span_1](end_span)
+                </div>
             </header>
             <section class="p-sections">
                 <div class="p-box">
                     <h3>一個</h3>
-                    [span_2](start_span)<p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>[span_2](end_span)
-                [span_3](start_span)</div>[span_3](end_span)
+                    <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
+                </div>
                 <div class="p-box">
                     <h3>興趣</h3>
-                    [span_4](start_span)<p>Minecraft、創作、懷舊設計、軟件修改</p>[span_4](end_span)
+                    <p>Minecraft、創作、懷舊設計、軟件修改</p>
                 </div>
-                [span_5](start_span)<div class="p-works-box">[span_5](end_span)
+                <div class="p-works-box">
                     <h3>作品</h3>
                     <div class="p-coverflow-engine" id="pEngine">
                         <div class="p-item">作品 1</div>
                         <div class="p-item">作品 2</div>
-                        [span_6](start_span)<div class="p-item">作品 3</div>[span_6](end_span)
+                        <div class="p-item">作品 3</div>
                         <div class="p-item">作品 4</div>
                         <div class="p-item">作品 5</div>
                     </div>
-                [span_7](start_span)</div>[span_7](end_span)
+                </div>
             </section>
             <footer class="p-footer">
                 <h3>關注我</h3>
                 <div class="p-social-bar">
                     <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
-                [span_8](start_span)</div>[span_8](end_span)
+                </div>
             </footer>
         </div>
     </div>
@@ -55,54 +55,54 @@
             <div class="l-home-left">
                 <div class="l-info-stack">
                     <div class="l-group">
-                        [span_9](start_span)<h3>一個</h3>[span_9](end_span)
+                        <h3>一個</h3>
                         <p>創作者、HongKonger、Minecrafter、測試者、設計者、開發者</p>
                     </div>
                     <div class="l-group">
-                        [span_10](start_span)<h3>興趣</h3>[span_10](end_span)
+                        <h3>興趣</h3>
                         <p>Minecraft、創作、懷舊設計、軟件修改</p>
                     </div>
                 </div>
                 <button class="l-btn-action" onclick="goWorks()">瀏覽作品</button>
-            [span_11](start_span)</div>[span_11](end_span)
+            </div>
             <div class="l-home-right">
                 <div class="l-profile-top">
-                    [span_12](start_span)<img src="image/icon.jpeg" class="l-avatar">[span_12](end_span)
+                    <img src="image/icon.jpeg" class="l-avatar">
                     <div class="l-name"><h1>Hello</h1><h2>我係TNH</h2></div>
                 </div>
-                [span_13](start_span)<div class="l-social-bottom">[span_13](end_span)
+                <div class="l-social-bottom">
                     <h3>關注我</h3>
                     <div class="l-icon-row">
                         <img src="image/ig.png"><img src="image/th.png"><img src="image/yt.png"><img src="image/rd.png"><img src="image/tw.png">
                     </div>
-                [span_14](start_span)</div>[span_14](end_span)
+                </div>
             </div>
         </div>
         <div class="l-panel" id="lWorks">
             <div class="l-fr-container-limit">
                 <div class="l-fr-engine">
                     <div class="l-fr-display">
-                        [span_15](start_span)<div class="fr-stage-box" id="frStage">[span_15](end_span)
+                        <div class="fr-stage-box" id="frStage">
                             <div class="fr-card fr-pos-left-out" id="frPrev">作品 5</div>
                             <div class="fr-card fr-pos-right-out" id="frNext">作品 3</div>
-                            [span_16](start_span)<div class="fr-card fr-pos-back" id="frBack">作品 2</div>[span_16](end_span)
+                            <div class="fr-card fr-pos-back" id="frBack">作品 2</div>
                             <div class="fr-card fr-pos-main" id="frMain">作品 1</div>
                         </div>
                         <div class="l-fr-btns">
-                            [span_17](start_span)<button class="fr-btn gray" onclick="goHome()">關閉</button>[span_17](end_span)
+                            <button class="fr-btn gray" onclick="goHome()">關閉</button>
                             <button class="fr-btn blue">前往</button>
                         </div>
-                    [span_18](start_span)</div>[span_18](end_span)
+                    </div>
                     <div class="l-fr-sidebar-wrap">
                         <h3 class="fr-sidebar-title">我的作品</h3>
                         <div class="l-fr-sidebar-box">
-                            [span_19](start_span)<ul id="frList">[span_19](end_span)
+                            <ul id="frList">
                                 <li class="active" onclick="selFRItem(0)">作品 1</li>
                                 <li onclick="selFRItem(1)">作品 2</li>
-                                [span_20](start_span)<li onclick="selFRItem(2)">作品 3</li>[span_20](end_span)
+                                <li onclick="selFRItem(2)">作品 3</li>
                                 <li onclick="selFRItem(3)">作品 4</li>
                                 <li onclick="selFRItem(4)">作品 5</li>
-                            [span_21](start_span)</ul>[span_21](end_span)
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -111,58 +111,58 @@
     </div>
 
     <div class="d-view">
-        [span_22](start_span)<div class="d-layout">[span_22](end_span)
+        <div class="d-layout">
             <aside class="d-sidebar-left">
                 <div class="d-profile-group">
                     <div class="d-header-top">
-                        [span_23](start_span)<img src="image/icon.jpeg" class="d-avatar">[span_23](end_span)
+                        <img src="image/icon.jpeg" class="d-avatar">
                         <div class="d-title-block">
                             <h1>Hello</h1>
                             <h2>我係TNH</h2>
                         </div>
-                    [span_24](start_span)</div>[span_24](end_span)
+                    </div>
                     <div class="d-about-me">
                         <h3>關於我</h3>
                         <p>這是一個極具戲劇性的個人空間，展示我的創作與興趣。</p>
                     </div>
-                [span_25](start_span)</div>[span_25](end_span)
+                </div>
                 <div class="d-social-vertical">
                     <div class="d-social-item"><img src="image/ig.png"><span>tnh_minecraft_lost</span></div>
                     <div class="d-social-item"><img src="image/th.png"><span>tnh_minecraft_lost</span></div>
-                    [span_26](start_span)<div class="d-social-item"><img src="image/yt.png"><span>TNH Minecraft</span></div>[span_26](end_span)
+                    <div class="d-social-item"><img src="image/yt.png"><span>TNH Minecraft</span></div>
                     <div class="d-social-item"><img src="image/rd.png"><span>TNTTC2</span></div>
                     <div class="d-social-item"><img src="image/tw.png"><span>TnhTrying44231</span></div>
                 </div>
             </aside>
             <div class="d-center-info" id="dCenterInfo">
-                [span_27](start_span)<div class="d-info-card">[span_27](end_span)
+                <div class="d-info-card">
                     <h3>一個</h3>
                     <p>創作者、玩家、HongKonger、Minecrafter、測試者、設計者、開發者</p>
                 </div>
                 <div class="d-info-card">
-                    [span_28](start_span)<h3>興趣</h3>[span_28](end_span)
+                    <h3>興趣</h3>
                     <p>Minecraft、創作、懷舊設計、軟件修改</p>
                 </div>
             </div>
             <main class="d-content-right">
                 <div class="d-stage-area" id="dStageArea">
-                    [span_29](start_span)<div class="fr-stage-box desktop-stage-size" id="dFrStage">[span_29](end_span)
+                    <div class="fr-stage-box desktop-stage-size" id="dFrStage">
                         <div class="fr-card fr-pos-left-out" id="dFrPrev">作品 5</div>
                         <div class="fr-card fr-pos-right-out" id="dFrNext">作品 3</div>
                         <div class="fr-card fr-pos-back" id="dFrBack">作品 2</div>
-                        [span_30](start_span)<div class="fr-card fr-pos-main" id="dFrMain">作品 1</div>[span_30](end_span)
+                        <div class="fr-card fr-pos-main" id="dFrMain">作品 1</div>
                     </div>
                 </div>
                 <div class="d-menu-wrapper" id="dMenuWrapper">
                     <h3 class="d-menu-header">我的作品</h3>
-                    [span_31](start_span)<div class="d-menu-list-box">[span_31](end_span)
+                    <div class="d-menu-list-box">
                         <ul id="dFrList">
                             <li class="active" onmouseenter="desktopHoverItem(0)">作品 1</li>
                             <li onmouseenter="desktopHoverItem(1)">作品 2</li>
-                            [span_32](start_span)<li onmouseenter="desktopHoverItem(2)">作品 3</li>[span_32](end_span)
+                            <li onmouseenter="desktopHoverItem(2)">作品 3</li>
                             <li onmouseenter="desktopHoverItem(3)">作品 4</li>
                             <li onmouseenter="desktopHoverItem(4)">作品 5</li>
-                        [span_33](start_span)</ul>[span_33](end_span)
+                        </ul>
                     </div>
                 </div>
             </main>
