--- a/app/devliplayer/web.html
+++ b/app/devliplayer/web.html
@@ -1,108 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Devil Player</title>
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="apple-touch-icon" href="./icon.png">
-    <link rel="manifest" id="pwa-manifest">
-
-    <style>
-        :root { --accent: #ff3e3e; --bg: #000; --deep-red: #8b0000; }
-        body, html { margin: 0; padding: 0; width: 100%; height: 100%; overflow: hidden; background: var(--bg); font-family: -apple-system, sans-serif; }
-        #canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 1; filter: blur(30px) saturate(2.2) contrast(1.4); }
-        .page { position: absolute; top: 0; left: 0; width: 100%; height: 100dvh; display: none; flex-direction: column; align-items: center; justify-content: center; z-index: 10; pointer-events: none; }
-        .page.active { display: flex; }
-        .settings-card { background: rgba(0, 0, 0, 0.7); padding: 25px; border-radius: 35px; backdrop-filter: blur(25px); -webkit-backdrop-filter: blur(25px); border: 1px solid rgba(255,255,255,0.1); width: 85%; max-width: 300px; text-align: center; pointer-events: auto; max-height: 80vh; overflow-y: auto; }
-        .setting-title { font-size: 0.75rem; font-weight: bold; margin: 15px 0 10px; color: white; opacity: 0.5; text-transform: uppercase; letter-spacing: 1px; }
-        #cover { width: 65vw; max-width: 300px; aspect-ratio: 1/1; border-radius: 20px; object-fit: cover; display: none; filter: drop-shadow(0 20px 50px rgba(0,0,0,0.8)); pointer-events: auto; z-index: 11; transition: transform 0.05s linear, opacity 0.3s ease; opacity: 0; }
-        #title { position: fixed; bottom: 100px; left: 50%; transform: translateX(-50%); width: 80%; text-align: center; font-size: 0.9rem; font-weight: bold; color: white; opacity: 0.9; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; z-index: 100; text-shadow: 0 2px 10px rgba(0,0,0,0.5); }
-        .bottom-controls { position: fixed; bottom: 35px; left: 50%; transform: translateX(-50%); width: 92%; max-width: 480px; display: flex; align-items: center; gap: 10px; z-index: 101; }
-        .play-bar { flex: 1; background: rgba(45, 45, 45, 0.5); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); border: 1px solid rgba(255,255,255,0.1); border-radius: 40px; height: 50px; display: flex; align-items: center; padding: 0 15px; pointer-events: auto; }
-        .mini-btn { width: 32px; height: 32px; display: flex; align-items: center; justify-content: center; cursor: pointer; color: white; margin-right: 10px; position: relative; }
-        .mini-btn svg { width: 24px; height: 24px; fill: currentColor; }
-        #seek-slider { flex: 1; accent-color: var(--accent); cursor: pointer; height: 4px; -webkit-appearance: none; background: rgba(255,255,255,0.2); border-radius: 2px; outline: none; }
-        #seek-slider::-webkit-slider-thumb { -webkit-appearance: none; width: 12px; height: 12px; background: white; border-radius: 50%; }
-        .spinner { width: 18px; height: 18px; border: 2px solid rgba(255,255,255,0.1); border-left-color: var(--accent); border-radius: 50%; animation: spin 1s linear infinite; position: absolute; }
-        @keyframes spin { to { transform: rotate(360deg); } }
-        .tab-bar { position: relative; background: rgba(45, 45, 45, 0.5); backdrop-filter: blur(20px); -webkit-backdrop-filter: blur(20px); border: 1px solid rgba(255,255,255,0.1); border-radius: 40px; padding: 5px; display: flex; gap: 5px; pointer-events: auto; }
-        .tab-item { position: relative; width: 45px; height: 40px; display: flex; align-items: center; justify-content: center; cursor: pointer; z-index: 2; color: rgba(255,255,255,0.3); }
-        .tab-item.active { color: #fff; }
-        .tab-indicator { position: absolute; top: 5px; left: 5px; width: 45px; height: 40px; background: var(--deep-red); border-radius: 20px; z-index: 1; transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 0 15px rgba(139, 0, 0, 0.5); }
-        #theme-selector { display: flex; flex-wrap: wrap; justify-content: center; gap: 8px; margin-bottom: 5px; }
-        .color-dot { width: 24px; height: 24px; border-radius: 50%; cursor: pointer; border: 2px solid transparent; transition: transform 0.2s; }
-        .color-dot:active { transform: scale(0.9); }
-        .color-dot.active { border-color: white; transform: scale(1.15); }
-        .opt-row { display: flex; justify-content: space-between; align-items: center; background: rgba(255,255,255,0.05); padding: 10px 15px; border-radius: 12px; margin-bottom: 8px; color: white; font-size: 0.8rem; pointer-events: auto; cursor: pointer; }
-        .opt-row.active { border-left: 3px solid var(--accent); background: rgba(255,255,255,0.1); }
-        .btn { display: block; background: var(--accent); padding: 12px; border-radius: 12px; cursor: pointer; font-weight: bold; font-size: 0.85rem; color: white; text-align: center; margin-top: 10px; }
-        .cache-btn { background: none; border: none; color: white; opacity: 0.4; font-size: 0.7rem; margin-top: 20px; text-decoration: underline; cursor: pointer; width: 100%; }
-        audio { display: none; }
-    </style>
-</head>
-<body>
-
-<canvas id="canvas"></canvas>
-<div id="title">NO TRACK SELECTED</div>
-
-<div id="page-settings" class="page active">
-    <div class="settings-card">
-        <div class="setting-title">Functions</div>
-        <div class="opt-row active" id="opt-loop" onclick="toggleLoop()">
-            <span>LOOP PLAYBACK</span><span id="loop-status">ON</span>
-        </div>
-        <div class="opt-row active" id="opt-cover" onclick="toggleCoverVisible()">
-            <span>SHOW COVER ART</span><span id="cover-status">ON</span>
-        </div>
-        <div class="opt-row active" id="opt-auto" onclick="toggleAuto()">
-            <span>AUTO COVER COLOR</span><span id="auto-status">ON</span>
-        </div>
-
-        <div class="setting-title">Custom Palette</div>
-        <div id="theme-selector">
-            <div class="color-dot" data-color="#ff0000" style="background:#ff0000" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#ff8c00" style="background:#ff8c00" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#ffff00" style="background:#ffff00" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#00ff00" style="background:#00ff00" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#00ffff" style="background:#00ffff" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#0000ff" style="background:#0000ff" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#8a2be2" style="background:#8a2be2" onclick="selectThemeColor(this)"></div>
-            <div class="color-dot" data-color="#ff00ff" style="background:#ff00ff" onclick="selectThemeColor(this)"></div> 
-            <div class="color-dot" data-color="#ffc0cb" style="background:#ffc0cb" onclick="selectThemeColor(this)"></div> 
-            <div class="color-dot" data-color="#ffffff" style="background:#ffffff" onclick="selectThemeColor(this)"></div> 
-            <div class="color-dot" data-color="#f5f5dc" style="background:#f5f5dc" onclick="selectThemeColor(this)"></div> 
-            <div class="color-dot" data-color="#8b4513" style="background:#8b4513" onclick="selectThemeColor(this)"></div> 
-            <div class="color-dot" data-color="#808080" style="background:#808080" onclick="selectThemeColor(this)"></div>
-        </div>
-
-        <label class="btn">SELECT MUSIC<input type="file" id="f" style="display:none"></label>
-        <button class="cache-btn" onclick="clearAppCache()">Clear App Data</button>
-    </div>
-</div>
-
-<div id="page-play" class="page"><img id="cover" onclick="handlePlayPause()"></div>
-
-<div class="bottom-controls">
-    <div class="play-bar">
-        <div class="mini-btn" onclick="handlePlayPause()">
-            <svg id="svg-play" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
-            <svg id="svg-pause" viewBox="0 0 24 24" style="display:none;"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>
-            <div id="loading-spinner" class="spinner" style="display:none;"></div>
-        </div>
-        <input type="range" id="seek-slider" value="0" max="1000">
-    </div>
-    <div class="tab-bar">
-        <div class="tab-indicator" id="indicator" style="transform: translateX(50px);"></div>
-        <div class="tab-item" onclick="switchPage('play', 0)"><svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor"><path d="M12 3v10.55c-.59-.34-1.27-.55-2-.55-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4V7h4V3h-6z"/></svg></div>
-        <div class="tab-item active" onclick="switchPage('settings', 1)"><svg viewBox="0 0 24 24" width="22" height="22" fill="currentColor"><path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.21.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg></div>
-    </div>
-</div>
-
-<audio id="player"></audio>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jsmediatags/3.9.5/jsmediatags.min.js"></script>
-
 <script>
     const cvs = document.getElementById('canvas'), ctx = cvs.getContext('2d');
     const player = document.getElementById('player'), cover = document.getElementById('cover'), titleTag = document.getElementById('title');
@@ -156,7 +51,6 @@
         updateParticles();
     }
 
-    // --- Background Media Session Logic ---
     function updateBackgroundInfo(title, art) {
         if ('mediaSession' in navigator) {
             navigator.mediaSession.metadata = new MediaMetadata({
@@ -189,7 +83,7 @@
         titleTag.innerText = file.name; cover.style.opacity = "0";
         const tx = db.transaction("devilLatest", "readwrite");
         tx.objectStore("devilLatest").put({ name: file.name, blob: file }, "latestTrack");
-        player.load(); player.play().then(() => { setLoading(false); if (!aCtx) initAudio(); }).catch(() => setLoading(false));
+        player.load(); player.play().then(() => { setLoading(false); }).catch(() => setLoading(false));
         processFileMetadata(file);
     };
 
@@ -212,8 +106,20 @@
         });
     }
 
-    player.onpause = () => { sPlay.style.display = 'block'; sPause.style.display = 'none'; if(aCtx) aCtx.suspend(); if ('mediaSession' in navigator) navigator.mediaSession.playbackState = "paused"; };
-    player.onplay = () => { sPlay.style.display = 'none'; sPause.style.display = 'block'; if(aCtx) aCtx.resume(); else initAudio(); if ('mediaSession' in navigator) navigator.mediaSession.playbackState = "playing"; };
+    // 關鍵修復：分離 AudioContext 的狀態與播放器的狀態
+    player.onpause = () => { 
+        sPlay.style.display = 'block'; 
+        sPause.style.display = 'none'; 
+        if ('mediaSession' in navigator) navigator.mediaSession.playbackState = "paused"; 
+    };
+
+    player.onplay = () => { 
+        sPlay.style.display = 'none'; 
+        sPause.style.display = 'block'; 
+        // 確保進入動畫，但不阻塞背景播放
+        if (aCtx) { if (aCtx.state === 'suspended') aCtx.resume(); } else { initAudio(); }
+        if ('mediaSession' in navigator) navigator.mediaSession.playbackState = "playing"; 
+    };
 
     function handlePlayPause() { 
         if (!player.src) return;
@@ -246,25 +152,38 @@
 
     function initAudio() {
         if (aCtx) return;
-        aCtx = new (window.AudioContext || window.webkitAudioContext)();
-        analyser = aCtx.createAnalyser(); const s = aCtx.createMediaElementSource(player);
-        s.connect(analyser); analyser.connect(aCtx.destination);
-        analyser.fftSize = 256; data = new Uint8Array(analyser.frequencyBinCount);
-        loop();
+        try {
+            aCtx = new (window.AudioContext || window.webkitAudioContext)();
+            analyser = aCtx.createAnalyser(); 
+            const s = aCtx.createMediaElementSource(player);
+            s.connect(analyser); 
+            analyser.connect(aCtx.destination);
+            analyser.fftSize = 256; 
+            data = new Uint8Array(analyser.frequencyBinCount);
+            loop();
+        } catch(e) { console.log("Init Audio blocked"); }
     }
 
     function loop() {
         requestAnimationFrame(loop);
         if (!isSeeking && player.duration && !player.paused) seek.value = (player.currentTime / player.duration) * 1000;
         let b = 0, m = 0;
-        if (analyser && !player.paused) { analyser.getByteFrequencyData(data); b = data[2]; m = data[15]; }
-        ctx.clearRect(0, 0, cvs.width, cvs.height); ctx.globalCompositeOperation = 'screen';
+        // 只有在前台且 aCtx 運行時才更新頻譜數據
+        if (analyser && !player.paused && aCtx && aCtx.state === 'running') { 
+            analyser.getByteFrequencyData(data); 
+            b = data[2]; 
+            m = data[15]; 
+        }
+        ctx.clearRect(0, 0, cvs.width, cvs.height); 
+        ctx.globalCompositeOperation = 'screen';
         particles.forEach((p, i) => {
             let e = (i % 2 === 0) ? b : m; p.angle += p.speed + (e / 1500);
             p.distance += ((e / 255) * (Math.min(cvs.width, cvs.height)*0.25) - p.distance) * 0.15;
             let x = (cvs.width/2) + Math.cos(p.angle) * p.distance, y = (cvs.height/2) + Math.sin(p.angle) * p.distance;
-            let sz = p.baseSize + (e * 0.6); const g = ctx.createRadialGradient(x, y, 0, x, y, sz);
-            g.addColorStop(0, p.color); g.addColorStop(1, 'transparent'); ctx.fillStyle = g; ctx.beginPath(); ctx.arc(x, y, sz, 0, Math.PI*2); ctx.fill();
+            let sz = p.baseSize + (e * 0.6); 
+            const g = ctx.createRadialGradient(x, y, 0, x, y, sz);
+            g.addColorStop(0, p.color); g.addColorStop(1, 'transparent'); 
+            ctx.fillStyle = g; ctx.beginPath(); ctx.arc(x, y, sz, 0, Math.PI*2); ctx.fill();
         });
         if (showCover && cover.style.display === 'block') cover.style.transform = `scale(${1 + (b / 600)})`;
     }
@@ -280,5 +199,3 @@
     seek.oninput = () => { isSeeking = true; };
     seek.onchange = () => { if(player.duration) player.currentTime = (seek.value / 1000) * player.duration; isSeeking = false; };
 </script>
-</body>
-</html>
